# sharepoint_docs_api

./: .gitignore  README  pyproject.toml  requirements.txt
cli/: main.py
cli/assets/: README
cli/assets/pages/metodologia/: main.html  transition.html
cli/assets/pages/relatorio/: edit.html  final.html  main.html
cli/assets/pages/relatorio/dropdown/: edit.html  final.html
cli/assets/pages/relatorio/geral/: edit.html  (+1 more)
cli/assets/scripts/relatorio/: 2.py
cli/assets/template/: template.aspx
cli/dumo_temp_folder/: service.py
cli/dump_temp_folder/: service.py
cli/service/pages_generator/: imea_pages_generator.py  main.py
cli/service/pages_generator/generator/: pages_generator.py
configure_sharepoint/stylesheet_config/: README
configure_sharepoint/token_config/: README  desktop.ini
lib/: __init__.py
research/configure_sharepoint/stylesheet_config/: create_clasic_exp.ps1
research/configure_sharepoint/token_config/: README
sharepoint_api_transport/: __init__.py
sharepoint_api_transport/src/repository/: mini_db.py
sharepoint_api_transport/src/transport/: sharepoint.py  sharepoint_auth.py
src/: database.json  main.py
src/assets/common/: backup.html  icons-box-secundary.html  relatorio-detalhe-header.html  warning-dialog.html
src/assets/pages/metodologia/: edit.html  main.html  transition.html
src/assets/pages/relatorio/: edit.html
src/assets/scripts/: README  metodologia.py  relatorio.py
src/repository/: mini_db.py  sharepoint.py  sharepoint_auth.py
src/service/: imea_pages_generator.py
src/service/generator/: pages_generator.py
(+9 files in other folders)
