[tool.poetry]
name = "sharepoint-transport"
version = "0.1.0"
description = ""
authors = ["Samuel Mar. <samuel.veloso.marcal@gmail.com>"]
packages = [{include = "lib"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
sharepoint-transport = "lib.main"  # Replace with your actual module and function

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
